<resources>
    <string name="app_name">IFP</string>
    <string name="app_version">1.0.0</string>
    <string name="footer_textView_powered_by">Powered By :</string>
    <string name="logo_description">Company Logo</string>
    <string name="action_sign_in">Login</string>
    <string name="username_empty">Please enter username</string>
    <string name="password_empty">Please enter password</string>
    <string name="invalid_credential">Invalid credential</string>
    <string name="se_user">setest</string>
    <string name="sr_user">srtest</string>
    <string name="newLeads_bucket_text">New Leads</string>
    <string name="inProgressLeads_bucket_text">In Progress Leads</string>
    <string name="completedLeads_bucket_text">Completed Leads</string>
    <string name="searchLeads_bucket_text">Search Leads</string>
    <string name="createNewLeads_bucket_text">Create New Leads</string>
    <string name="rejectedLeads_bucket_text">Rejected Leads</string>
    <string name="count_text">Count</string>
    <string name="default_count_text">0</string>
    <string name="leads_card_view_text">Leads Card View</string>
    <string name="contentDescription_profile_menu">Profile Menu</string>
    <string name="welcome_text">Welcome  </string>
    <string name="switch_button_off">OFF</string>
    <string name="switch_button_on">ON</string>
    <string name="contentDescription_notificatiom">Notification Icon</string>
    <string name="data_not_available">Data not available..!</string>
    <string name="somthing_went_wrong">Something went wrong..!</string>
    <string name="createdDateLabel">Created </string>
    <string name="etrLabel">Committed ETR </string>
    <string name="addressLabel">Address</string>
    <string name="profile_text">Profile</string>
    <string name="lead_details_text">Lead Details</string>
    <string name="lead_card_view_text">Lead Card View</string>
    <string name="create_new_lead_text">Create New Lead</string>
    <string name="role_text">Role</string>
    <string name="branch_text">Branch</string>
    <string name="city_text">City</string>
    <string name="change_password_text">Change Password</string>
    <string name="submit_password_text">Submit</string>
    <string name="cancel_change_password">Cancel</string>
    <string name="old_password_text">Old Password</string>
    <string name="new_password_text">New Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="empty_old_password">Old password is mandatory field..!</string>
    <string name="wrong_old_password">Incorrect old password..!</string>
    <string name="empty_new_password">New password is mandatory..!</string>
    <string name="old_new_password_mismatch">New password and confirm password not matched..!</string>
    <string name="old_new_password_same">New password cannot be same as Old password..!</string>
    <string name="change_password_alert">Are you sure you want to change your password..?</string>
    <string name="password_changed">Your password has been changed..!</string>
    <string name="changing_password">Changing Password..!</string>
    <string name="logout_text">Log Out</string>
    <string name="application_version_text">App version</string>
    <string name="activity_biu">BIU</string>
    <string name="activity_demo">Demo</string>
    <string name="activity_order">Order</string>
    <string name="contentDescription_lock_status">Notification Icon</string>
    <string name="contentDescription_update_status">Update Status</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="created_date">Created Date</string>
    <string name="committed_etr">Committed Etr</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name (Optional)</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="alternate_mobile_no">Alternate Mobile Number (Optional)</string>
    <string name="office_number">Office Number (Optional)</string>
    <string name="email_id">Email Id</string>
    <string name="alternate_email_id">Alternate Email Id (Optional)</string>
    <string name="city">City</string>
    <string name="current_addressLine1">Current Address Line1</string>
    <string name="current_addressLine2">Current Address Line2 (Optional)</string>
    <string name="communication_address">Communication Address</string>
    <string name="current_addressLandmark">Current Address Landmark (Optional)</string>
    <string name="current_addressPincode">Current Address Pincode</string>
    <string name="communication_addressLine1">Communication Address Line1</string>
    <string name="communication_addressLine2">Communication Address Line2 (Optional)</string>
    <string name="communication_addressLandmark">Communication Address Landmark (Optional)</string>
    <string name="communication_addressPincode">Communication Address Pincode</string>
    <string name="preferred_callTime">Preferred Call Time</string>
    <string name="activity_name_demo">Demo</string>
    <string name="activity_name_order">Order</string>
    <string name="title_spinner_floating_label">Title</string>
    <string name="title_spinner_hint">Select Title</string>
    <string name="branch_spinner_floating_label">Branch</string>
    <string name="branch_spinner_hint">Select Branch</string>
    <string name="area_spinner_floating_label">Area</string>
    <string name="area_spinner_hint">Select Area</string>
    <string name="customer_interest_spinner_floating_label">Is Customer Interested</string>
    <string name="customer_low_interest_spinner_floating_label">Customer disinterest Reason</string>
    <string name="customer_interest_spinner_hint">Is Customer Interested?</string>
    <string name="customer_low_interest_reason_spinner_hint">Select Customer disinterest Reason</string>
    <string name="basic_info_update_bt_text">Update</string>
    <string name="assetCategory_spinner_floating_label">Asset Category</string>
    <string name="assetCategory_hint">Select Asset Category</string>
    <string name="assetDetails">Asset Details</string>
    <string name="assetQuantity_spinner_floating_label">Asset Quantity</string>
    <string name="assetQuantity_hint">Select Asset Quantity</string>
    <string name="assetModel_spinner_floating_label">Asset Model</string>
    <string name="assetModel_hint">Select Asset Model</string>
    <string name="productCount">Number of Product </string>
    <string name="totalAmount">Total Amount</string>
    <string name="customerComments">Customer Comment</string>
    <string name="amountCharged">Amount Charged</string>
    <string name="discountGiven">Discount Given</string>
    <string name="actualAmountToBePaid">Actual Amount To Be Paid</string>
    <string name="invalid_server_response_for_webservice">Unable to connect to Server for  </string>
    <string name="submit_button">Submit</string>
    <string name="min_preffered_time">Please Select Time after current time..! </string>
    <string name="added_time_for_mq">Added 2 hours on you selection for MQ restriction..! </string>
    <string name="select_title">Please select Title</string>
    <string name="enter_firstname">Please enter First Name</string>
    <string name="enter_lastname">Please enter Last Name</string>
    <string name="enter_mobile">Please Enter Mobile Number</string>
    <string name="enter_valid_mobile">Please Enter Valid Mobile Numner</string>
    <string name="enter_email">Please enter Email Id</string>
    <string name="enter_valid_email">Please enter valid Email Id</string>
    <string name="select_branch">Please select Branch</string>
    <string name="select_area">Please select Area</string>
    <string name="enter_communication_address">Please enter Communication Address</string>
    <string name="enter_currentAddressLine1">Please enter Current Address Line1</string>
    <string name="enter_currentAddressLine2">Please enter Current Address Line2</string>
    <string name="enter_currentAddressLandmark">Please enter Current Address Landmark</string>
    <string name="enter_currentAddressPincode">Please enter Current Address Pincode</string>
    <string name="select_preferred_call_time">Please select Preferred Call Time</string>
    <string name="select_customer_interest">Please select customer interest</string>
    <string name="select_customer_low_interest_reason">Please select customer disinterest reason</string>
    <string name="lead_create_alert_message">Do you want to Create Lead..?</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_ok">Ok</string>
    <string name="alert_button_no">No</string>
    <string name="please_wait">Please wait...</string>
    <string name="prospect_created_successfully">Prospect Created Successfully..!</string>
    <string name="title_activity_srleads_details">SRLeadsDetailsActivity</string>
    <string name="service_request_lead">Service Request Lead</string>
    <string name="action_settings">Settings</string>
    <string name="enter_current_address_line1">Please Enter Current Address Line1</string>
    <string name="enter_current_address_line2">Please Enter Current Address Line2</string>
    <string name="enter_current_address_landmark">Please Enter Current Address Landmark</string>
    <string name="enter_current_address_pincode">Please Enter Current Address Pincode</string>
    <string name="enter_communication_address_line1">Please Enter Communication Address Line1</string>
    <string name="enter_communication_address_line2">Please Enter Communication Address Line2</string>
    <string name="enter_communication_address_landmark">Please Enter Communication Address Landmark</string>
    <string name="enter_communication_address_pincode">Please Enter Communication Address Pincode</string>
    <string name="basic_info_upadte_alert_message">Do you want to update lead details..?</string>
    <string name="product_description_text">Product Image</string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="product_details_fragment">product details fragment</string>
    <string name="product_image_fragment">product image fragment</string>
    <string name="product_video_fragment">product video fragment</string>
    <string name="gross_capacity">Gross Capacity</string>
    <string name="add_to_order_list">Add Order</string>
    <string name="specificationLabel">Specifications</string>
    <string name="place_order">Place Order</string>
    <string name="ticketNumber_text">Ticket Number</string>
    <string name="mobileNumber_text">Mobile Number</string>
    <string name="search_text">Search</string>
    <string name="search_cancel_text">Cancel</string>
    <string name="action_clear">Clear</string>
    <string name="action_circle">Draw Circle</string>
    <string name="action_overlay">Draw Overlay</string>
    <string name="action_polygon">Draw Polygon</string>
    <string name="action_traffic">Toggle Traffic</string>
    <string name="action_cycle_map_type">Cycle Map Type</string>
    <string name="dialog_play_services_unavailable">Google Play Services are unavailable.</string>
    <string name="dialog_download_play_services">Download Play Services</string>
    <string name="dialog_close_program">Close Program</string>
    <string name="title_prompt">Title</string>
    <string-array name="title_array">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Dr</item>
        <item>Er</item>
    </string-array>
    <string-array name="customer_interest_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
</resources>