<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/action_bar_height"
    android:background="@color/colorPrimary"
    android:minWidth="@dimen/action_bar_width"
    android:orientation="horizontal"
    android:weightSum="4" >

    <ImageView
        android:id="@+id/profileMenu_IV"
        android:layout_width="@dimen/profile_menu_width"
        android:layout_height="@dimen/profile_menu_height"
        android:layout_marginTop="@dimen/profile_menu_top_margin"
        android:layout_weight="0.2"
        android:contentDescription="@string/contentDescription_profile_menu"
        android:src="@drawable/profile_menu" />

    <TextView
        android:id="@+id/welcome_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/welcome_text_right_margin"
        android:layout_marginTop="@dimen/welcome_text_top_margin"
        android:layout_weight="3"
        android:singleLine="true"
        android:text="@string/welcome_text"
        android:textColor="@color/hmWhite"
        android:textSize="@dimen/medium_font_size"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/refresh_IV"
        android:layout_width="@dimen/refresh_icon_width"
        android:layout_height="@dimen/refresh_icon_height"
        android:layout_marginTop="5dp"
        android:layout_weight=".4"
        android:contentDescription="@string/contentDescription_refresh"
        android:src="@drawable/refresh_icon_white" />

    <Switch
        android:id="@+id/user_SB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/switch_button_right_margin"
        android:layout_marginTop="@dimen/switch_button_top_margin"
        android:layout_weight=".5"
        android:textColor="@color/hmWhite"
        android:textOff="@string/switch_button_off"
        android:textOn="@string/switch_button_on"
        android:textSize="@dimen/switch_button_text_size"
        android:thumb="@drawable/switch_thumb"
        android:track="@drawable/switch_track" />

</LinearLayout>